--- a/lupus-frontend/index.html
+++ b/lupus-frontend/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
-	<title>Angular 2 QuickStart</title>
+	<title>Lupus in Tabula</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
 
 	<!-- 1. Load libraries -->
 	<!-- Polyfill(s) for older browsers -->
@@ -21,6 +23,6 @@
 </head>
 
 <body>
-	<my-app>Loading...</my-app>
+	<lupus-app>Loading...</lupus-app>
 </body>
 </html>
