Added base router
Started DashboardComponent

--- a/lupus-frontend/index.html
+++ b/lupus-frontend/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+	<base href="/">
 	<title>Lupus in Tabula</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="styles.css">
 
 	<!-- 1. Load libraries -->
 	<!-- Polyfill(s) for older browsers -->
