--- a/lupus-frontend/index.html
+++ b/lupus-frontend/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="node_modules/ng2-slim-loading-bar/style.css">
 	<link rel="stylesheet" href="styles.css">
 
 	<!-- 1. Load libraries -->
