Loading massage in the index is a bit more styled

--- a/lupus-frontend/index.html
+++ b/lupus-frontend/index.html
@@ -27,6 +27,12 @@
 </head>
 
 <body>
-	<lupus-app>Loading...</lupus-app>
+	<lupus-app>
+		<div style="text-align: center; height: 50%; margin: 20% auto 25% auto">
+			<h1>The magic is happening!</h1>
+			<h3>and loading...</h3>
+			<h5>be patient please...</h5>
+		</div>
+	</lupus-app>
 </body>
 </html>
